--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mediapp.frontend",
+  "name": "mediapp-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,22 +10,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^19.2.15",
+    "@angular/cdk": "^19.2.9",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.15",
+    "@angular/material": "^19.2.9",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
+    "ng2-pdf-viewer": "^10.4.0",
+    "ngx-flexible-layout": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.10",
-    "@angular/cli": "^20.0.3",
+    "@angular-devkit/build-angular": "^19.2.7",
+    "@angular/cli": "^19.2.7",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
